--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@zeit/fetch-retry": "^5.0.0",
     "csv-parse": "^4.8.8",
     "isomorphic-unfetch": "^3.0.0",
-    "qs": "^6.9.1"
+    "qs": "^6.9.1",
+    "querystring": "^0.2.0"
   },
   "devDependencies": {
     "@now/node": "^1.4.1",
