--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@zeit/fetch-retry": "^5.0.0",
     "csv-parse": "^4.8.8",
     "isomorphic-unfetch": "^3.0.0",
+    "objects-to-csv": "^1.3.6",
     "qs": "^6.9.1",
     "querystring": "^0.2.0"
   },
