--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "license": "MIT",
   "dependencies": {
     "@zeit/fetch-retry": "^5.0.0",
+    "chrome-aws-lambda": "^2.1.1",
     "csv-parse": "^4.8.8",
     "isomorphic-unfetch": "^3.0.0",
     "objects-to-csv": "^1.3.6",
+    "puppeteer-core": "^2.1.1",
     "qs": "^6.9.1",
     "querystring": "^0.2.0"
   },
