--- a/package.json
+++ b/package.json
@@ -5,17 +5,26 @@
   "author": "Muhammad Mustadi",
   "license": "MIT",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@zeit/fetch-retry": "^5.0.0",
+    "chakra-ui": "^0.3.9",
     "chrome-aws-lambda": "^2.1.1",
     "csv-parse": "^4.8.8",
+    "emotion-theming": "^10.0.27",
     "isomorphic-unfetch": "^3.0.0",
+    "next": "^9.3.2",
     "objects-to-csv": "^1.3.6",
     "puppeteer-core": "^2.1.1",
     "qs": "^6.9.1",
-    "querystring": "^0.2.0"
+    "querystring": "^0.2.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "swr": "^0.1.18"
   },
   "devDependencies": {
     "@now/node": "^1.4.1",
-    "@types/qs": "^6.9.1"
+    "@types/qs": "^6.9.1",
+    "typescript": "^3.8.3"
   }
 }
